--- a/.gitignore
+++ b/.gitignore
@@ -4,24 +4,24 @@ variables.env
 .DS_Store
 
 client/node_modules
-client/build
+# client/build
 client/.gitignore
 client/README.md
 
-public/*
-!public/images
+# public/*
+# !public/images
 
-public/images/chat-images/*
-!public/images/chat-images/placeholder.png
+# public/images/chat-images/*
+# !public/images/chat-images/placeholder.png
 
-public/images/post-images/*
-!public/images/post-images/placeholder.png
-!public/images/post-images/thumbnail
-public/images/post-images/thumbnail/*
-!public/images/post-images/thumbnail/placeholder.png
+# public/images/post-images/*
+# !public/images/post-images/placeholder.png
+# !public/images/post-images/thumbnail
+# public/images/post-images/thumbnail/*
+# !public/images/post-images/thumbnail/placeholder.png
 
-public/images/profile-picture/*
-!public/images/profile-picture/100x100
-!public/images/profile-picture/person.png
-public/images/profile-picture/100x100/*
-!public/images/profile-picture/100x100/person.png
+# public/images/profile-picture/*
+# !public/images/profile-picture/100x100
+# !public/images/profile-picture/person.png
+# public/images/profile-picture/100x100/*
+# !public/images/profile-picture/100x100/person.png
