--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "license": "ISC",
   "scripts": {
-    "start": "node ./bin/www",
-    "server": "nodemon ./bin/www",
+    "start": "node app.js",
+    "server": "nodemon app.js",
     "client": "npm start --prefix client",
     "test": "mocha --recursive --exit --timeout 10000",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
